test/negative/BigIntParenthesized.java
public class BigIntParenthesized {
  public BigIntParenthesized (){}
  protected int x = -(2147483648);
}
